amq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: amq
  name: amq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: amq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/cachedataservice_backend: "true"
        io.kompose.service: amq
    spec:
      containers:
      - args:
        - rabbitmq-server
        - start
        image: rabbitmq:latest
        imagePullPolicy: ""
        name: amq
        ports:
        - containerPort: 5672
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
