app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/cachedataservice_backend: "true"
        io.kompose.service: app
    spec:
      containers:
      - image: app
        imagePullPolicy: ""
        name: app
        ports:
        - containerPort: 8090
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
