amq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: amq
  name: amq
spec:
  ports:
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: amq
status:
  loadBalancer: {}
