cachedataservice_backend-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cachedataservice_backend
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/cachedataservice_backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cachedataservice_backend: "true"
